fix: :lipsticks: prevent horizontel overflow

--- a/stylus/extension/index.styl
+++ b/stylus/extension/index.styl
@@ -1,7 +1,7 @@
 @import '../website/index'
 
 .container
-  width 800px
+  max-width 800px
 
 .jwt-clipboard-btn
   background #000
